# auto-ai

./: .gitignore  README.md  pyproject.toml
src/auto_ai/: __main__.py  cli.py
