[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ai"
version = "0.1.0"
description = "Strict terminal menu auto-responder for Codex and similar CLI tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "rabbit" }
]
dependencies = [
  "pexpect>=4.9,<5",
]

[project.scripts]
auto-ai = "auto_ai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
